alignment issue fix

--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -38,7 +38,8 @@
 }
 @media only screen and (max-width: 500px) {
     .custom-font-size-nav-link{
-        font-size:11px
+        font-size:11px;
+        padding-top:5px
     }
 }
 
